--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ nav {
   justify-content:space-around;
   align-items: center;
   min-height: 10vh;
-  background-color:darkblue;
+  background-color: #233131;
   color:white;
 }
 
